    - changed default warning type for plugin errors from
      E_USER_WARNING to E_USER_ERROR (Monte)
    - added $all_extra, $hour_extra, $minute_extra,
      $second_extra and $meridian_extra parameters to
      html_select_time function (Rainer Collet, Monte)
    - update debug console to print objects (Simon Willison,
      Monte)
    - fix Config_File class to not error when there are no
      sections (Peter Kmet, Monte)
    - add default modifier logic (Monte)
    - updated popup_init to be xhtml compliant (Tom Oram, Monte)
    - fix filename bug with windows (Gary Loescher, Monte)
    - add ability to supply expire time in seconds when clearing
      cache or compile files (Monte)
    - add {debug} plugin to distribution (Monte)
    - fixed bug with insert tags, loading from "script" attribute
      when caching is enabled (Monte)
    - fix bug with debug_tpl file path with Windows (.SMK., Monte)
    - fix append() function with string/array problem (Monte)

Version 2.2.0
-------------

    - make debug.tpl work with any delimiter (Monte)
    - change logic in assign() and append() to test var names
      against != '' instead of empty() (Monte)
    - fix PHP notice in append() function (Monte)
    - allow $plugins_dir to be an array of directories
      (Andreas Kossmeier, Monte)
    - move debug.tpl to SMARTY_DIR, add to constructor (Monte)
    - fixed warning message in function.assign_debug_info (Monte)
    - fixed $template_dir, $compile_dir, $cache_dir, $config_dir,
      $plugin_dir to respect include_path (Monte)
    - fixed warning message with output filter array (Monte)
    - add optional 2nd parameter to date_format, used as
      the default date if the passed date is empty (Monte)
    - gave $reset a default value in cycle plugin (Monte)
    - fixed warnings with html_select_date and timestamp
      functions (Monte)
    - added support for sub directory exlusion format (Monte)
    - added support for grouping by cache_id, compile_id